New Project Added

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="https://github.com/The-Soujash/Weather-web-app.git"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
